# cargo.nvim

./: .luacheckrc  Cargo.toml  README.md  Release.sh
.github/workflows/: lua.yml  release.yml  rust.yml
lua/cargo/: init.lua
plugin/: cargo.lua
src/: cargo_commands.rs  error.rs  lib.rs  lua_exports.rs
tests/: init_spec.lua  minimal_init.lua
