[package]
name = "cargo-nvim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A Neovim plugin for Rust Cargo commands"
license = "MIT"

[lib]
name = "cargo_nvim"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9", features = ["module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["luajit"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
