[package]
name = "cargo-nvim"
version = "0.1.1"
edition = "2021"
authors = ["nwiizo <nwiizo@gmail.com>"]
description = "A Neovim plugin for Rust Cargo commands"
license = "MIT"
repository = "https://github.com/nwiizo/cargo.nvim"
keywords = ["neovim", "rust", "cargo", "plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[lib]
name = "cargo_nvim"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10", features = ["module"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["luajit"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[dev-dependencies]
tokio = { version = "1.43", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
